--- a/docs/docs/tracing/index.mdx
+++ b/docs/docs/tracing/index.mdx
@@ -218,7 +218,7 @@ MLflow Tracing is integrated with various GenAI libraries and provide **one-line
     <span>![Smolagents Logo](/images/logos/smolagents-logo.png)</span>
   </SmallLogoCard>
   <SmallLogoCard link="/tracing/integrations/pydantic_ai">
-    <span>![Smolagents Logo](/images/logos/pydanticai-logo.png)</span>
+    <span>![PydanticAI Logo](/images/logos/pydanticai-logo.png)</span>
   </SmallLogoCard>
 </CardGroup>
 <br />
