--- a/docs/docs/tracing/integrations/index.mdx
+++ b/docs/docs/tracing/integrations/index.mdx
@@ -76,7 +76,7 @@ import TabItem from "@theme/TabItem";
     <span>![Smolagents Logo](/images/logos/smolagents-logo.png)</span>
   </SmallLogoCard>
   <SmallLogoCard link="/tracing/integrations/pydantic_ai">
-    <span>![Smolagents Logo](/images/logos/pydanticai-logo.png)</span>
+    <span>![PydanticAI Logo](/images/logos/pydanticai-logo.png)</span>
   </SmallLogoCard>
 </CardGroup>
 <br />
